<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Register_Fragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/register_name"
        android:layout_centerHorizontal="true"
        android:hint="@string/name"
        android:textSize="25sp"
        android:inputType="textPersonName"
        android:layout_marginTop="160dp"
        android:textAlignment="center"
        android:maxLength="25"
        android:singleLine="true"
        android:drawableLeft="@drawable/name"
        />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/register_email"
        android:layout_centerHorizontal="true"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="25sp"
        android:layout_marginTop="230dp"
        android:textAlignment="center"
        android:maxLength="25"
        android:singleLine="true"
        android:drawableLeft="@drawable/email"
        />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/register_birthdate"
        android:layout_centerHorizontal="true"
        android:hint="@string/bDate"
        android:textSize="25sp"
        android:layout_marginTop="300dp"
        android:textAlignment="center"
        android:maxLength="10"
        android:singleLine="true"
        android:drawableLeft="@drawable/date"
        />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/register_city"
        android:layout_centerHorizontal="true"
        android:hint="@string/city"
        android:textSize="25sp"
        android:layout_marginTop="370dp"
        android:textAlignment="center"
        android:inputType="textPersonName"
        android:maxLength="25"
        android:singleLine="true"
        android:drawableLeft="@drawable/city"
        />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/register_gender"
        android:layout_centerHorizontal="true"
        android:hint="@string/gender"
        android:textSize="25sp"
        android:layout_marginTop="440dp"
        android:textAlignment="center"
        android:inputType="text"
        android:maxLength="6"
        android:singleLine="true"
        android:drawableLeft="@drawable/gender"
        />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="510dp"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:maxLength="25"
            android:singleLine="true"
            android:textAlignment="center"
            android:textSize="25sp"
            android:drawableLeft="@drawable/password"/>


    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/register_re_password"
        android:layout_centerHorizontal="true"
        android:hint="@string/re_enterPass"
        android:inputType="textPassword"
        android:textSize="25sp"
        android:layout_marginTop="580dp"
        android:textAlignment="center"
        android:maxLength="25"
        android:singleLine="true"
        android:drawableLeft="@drawable/password"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:id="@+id/register_button"
        android:text="@string/register"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="670dp"
        />

</RelativeLayout>