<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile_Fragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Profile"
        android:textStyle="bold"
        android:textSize="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ProfileName"
        android:textSize="30sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="150dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_name"

        android:textSize="25sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="190dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ProfileEmail"
        android:textSize="30sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="250dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_email"

        android:textSize="25sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="290dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ProfileGender"
        android:textSize="30sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="350dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_gender"

        android:textSize="25sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="390dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ProfileBirthdate"
        android:textSize="30sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="450dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_birthdate"
        android:textSize="25sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="490dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ProfileCity"
        android:textSize="30sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="550dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_city"

        android:textSize="25sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="590dp"
        />

</RelativeLayout>