<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgot_Fragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Forget"
        android:textSize="50sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"/>

    <EditText
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:id="@+id/forget_email"
        android:hint="@string/Forget_Email"
        android:inputType="textEmailAddress"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:gravity="center"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forget_button"
        android:text="@string/forget_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="320dp"/>



</RelativeLayout>